--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A web developer with expertise in React, Node.js, and Express. Explore his portfolio to see his latest projects, including web applications and custom websites. With years of experience that can help bring your digital ideas to life. Contact him today to start your project!"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Clean React App</title>
+    <title>Aaron Santos | Life as a Developer</title>
   </head>
   <body>
     <div id="root"></div>
