update meta tags

--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="A web developer with expertise in React, Node.js, and Express. Explore his portfolio to see his latest projects, including web applications and custom websites. With years of experience that can help bring your digital ideas to life. Contact him today to start your project!"
     />
-    
-    <link rel="manifest" href="/site.webmanifest">
-    
+
+    <link rel="manifest" href="/site.webmanifest" />
+
     <title>Aaron Santos | Life as a Developer</title>
   </head>
   <body>
