add meta and open graph tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
       name="description"
       content="A web developer with expertise in React, Node.js, and Express. Explore his portfolio to see his latest projects, including web applications and custom websites. With years of experience that can help bring your digital ideas to life. Contact him today to start your project!"
     />
-
+    <meta
+      property="og:image"
+      content="https://app.gemoo.com/share/image-annotation/557172221892030464?codeId=Mp1E668EjZlEq&origin=imageurlgenerator"
+    />
+    <meta
+      property="og:title"
+      content="Aaron Fritz Santos | Life as a Developer"
+    />
+    <meta
+      property="og:description"
+      content="A web developer with expertise in React, Node.js, and Express. Explore his portfolio to see his latest projects, including web applications and custom websites. With years of experience that can help bring your digital ideas to life. Contact him today to start your project!"
+    />
+    <meta property="og:url" content="https://afsantos.netlify.app/" />
+    <meta property="og:type" content="website" />
     <link rel="manifest" href="/site.webmanifest" />
 
     <title>Aaron Santos | Life as a Developer</title>
