update open graph image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <meta
       property="og:image"
-      content="https://app.gemoo.com/share/image-annotation/557172221892030464?codeId=Mp1E668EjZlEq&origin=imageurlgenerator"
+      content="https://app.gemoo.com/share/image-annotation/557217317328986112?codeId=DGqVqJnZdwgj6&origin=imageurlgenerator"
     />
     <meta
       property="og:title"
