update open graph image url

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <meta
       property="og:image"
-      content="https://app.gemoo.com/share/image-annotation/557217317328986112?codeId=DGqVqJnZdwgj6&origin=imageurlgenerator"
+      content="/assets/image.png"
     />
     <meta
       property="og:title"
