update additional meta tags

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     />
     <meta property="og:url" content="https://afsantos.netlify.app/" />
     <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="737150288025997" />
     <link rel="manifest" href="/site.webmanifest" />
 
     <title>Aaron Santos | Life as a Developer</title>
