--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <meta
       property="og:image"
-      content="https://afsantos.netlify.app/assets/image.png"
+      content="https://afsantos.netlify.app/assets/image-logo.png"
     />
     <meta
       property="og:title"
