--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <link rel="canonical" href="https://afsantos.netlify.app/" />
   </head>
   <body>
+    <div id="root"></div>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
@@ -107,5 +108,6 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
