update meta tags

--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <!-- Essential Meta Tags -->
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Aaron Santos | Web Designer & Developer Portfolio</title>
+    <meta
+      name="description"
+      content="Aaron Santos is a full-time web designer and developer specializing in React, Node.js, and modern web technologies. Explore a curated portfolio of high-quality, scalable websites and applications."
+    />
+    <meta
+      name="keywords"
+      content="Aaron Santos, web developer, front-end developer, React developer, full-stack developer, web designer Philippines, portfolio, freelance developer"
+    />
+    <meta name="author" content="Aaron Santos" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://afsantos.netlify.app/" />
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -13,28 +25,16 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="theme-color" content="#ffffff" />
 
-    <!-- SEO Meta Tags -->
-    <meta name="author" content="Aaron Santos" />
-    <meta name="robots" content="index, follow" />
-    <meta
-      name="description"
-      content="Aaron Santos is a full-time web designer and developer specializing in React, Node.js, and modern web technologies. Explore his portfolio of high-quality websites and applications."
-    />
-    <meta
-      name="keywords"
-      content="Aaron Santos, web developer, front-end, React developer, portfolio, freelance developer, full-stack, web designer Philippines"
-    />
-
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://afsantos.netlify.app/" />
     <meta
       property="og:title"
-      content="Aaron Santos | Web Developer & Designer"
+      content="Aaron Santos | Web Designer & Developer Portfolio"
     />
     <meta
       property="og:description"
-      content="Explore Aaron's portfolio—full-time web developer & designer focused on React, Node.js, and scalable solutions. Let’s build something great."
+      content="Discover Aaron Santos’ work as a professional web developer and designer—specializing in React, Node.js, and user-centered digital solutions."
     />
     <meta
       property="og:image"
@@ -42,15 +42,15 @@
     />
     <meta property="fb:app_id" content="737150288025997" />
 
-    <!-- Twitter Card -->
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Aaron Santos | Web Developer & Designer"
+      content="Aaron Santos | Web Designer & Developer Portfolio"
     />
     <meta
       name="twitter:description"
-      content="Full-time developer with a passion for web design, React, Node.js, and scalable digital solutions. See the work and connect today."
+      content="Discover Aaron Santos’ portfolio—featuring full-stack web development and design focused on modern, scalable solutions."
     />
     <meta
       name="twitter:image"
@@ -81,13 +81,18 @@
 
     <!-- Google Tag Manager -->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R6RY7451QG"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-R6RY7451QG"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'G-R6RY7451QG');
+      gtag("config", "G-R6RY7451QG");
     </script>
     <!-- End Google Tag Manager -->
 
@@ -105,6 +110,6 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-     <script type="module" src="/src/index.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
